# nixmcp

./: .cursorrules  .env  .envrc  .flake8  .gitignore  .goosehints  .mcp.json  .pre-commit-config.yaml  .windsurfrules  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  TEST_PROMPTS.md  configuration.nix  flake.nix  mcp_diagnose.py  mcp_shell.py  mcp_test_client.py  nixmcp_app.py  nixmcp_util.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  server.py  setup.py  smithery.yaml  test-runner.sh  test_mcp.py  verify_flake.sh  wily.cfg
.github/workflows/: ci-fix.yml  ci.yml  complexity.yml  publish.yml  windows-tests.yml  windows.yml
docs/: WINDOWS_TESTING.md
mcp_nixos/: __init__.py  __main__.py  logging.py  run.py  server.py
mcp_nixos/cache/: __init__.py  html_cache.py  simple_cache.py
mcp_nixos/clients/: __init__.py  elasticsearch_client.py  home_manager_client.py
mcp_nixos/completions/: __init__.py  home_manager.py  nixos.py  utils.py
mcp_nixos/contexts/: __init__.py  home_manager_context.py  nixos_context.py
mcp_nixos/resources/: __init__.py  home_manager_resources.py  nixos_resources.py
mcp_nixos/tools/: __init__.py  discovery_tools.py  home_manager_tools.py  nixos_tools.py
mcp_nixos/utils/: __init__.py  cache_helpers.py  helpers.py  state_persistence.py
nixmcp/: __init__.py  __main__.py  api.py  cli.py  logging.py  model_context.py  server.py
nixmcp/cache/: __init__.py  html_cache.py  simple_cache.py
nixmcp/clients/: __init__.py  elasticsearch_client.py  home_manager_client.py  html_client.py
nixmcp/completions/: __init__.py  home_manager.py  nixos.py  utils.py
nixmcp/contexts/: __init__.py  home_manager_context.py  nixos_context.py
nixmcp/resources/: __init__.py  home_manager_resources.py  nixos_resources.py
nixmcp/tools/: __init__.py  home_manager_tools.py  nixos_tools.py
nixmcp/utils/: __init__.py  cache_helpers.py  helpers.py
tests/: __init__.py  conftest.py  test_app_lifespan.py  test_completion.py  test_darwin_cache.py  test_darwin_client.py  test_darwin_context.py  test_darwin_integration.py  test_darwin_serialization.py  test_darwin_tools_coroutine.py  test_eager_loading.py  test_elasticsearch_client.py  test_enhanced_logging.py  test_helper_functions.py  test_hierarchical_paths.py  test_home_manager.py  test_home_manager_client.py  test_home_manager_hierarchy.py  test_home_manager_integration.py  test_home_manager_mcp_integration.py  test_home_manager_resources.py  test_html_cache.py  test_html_client.py  test_init.py  test_main_module.py  test_mcp_completions.py  test_mcp_resources.py  test_mcp_tools.py  test_model_context.py  test_nixmcp.py  test_nixos_context.py  test_orphan_process_cleanup.py  test_package_documentation.py  test_request_gating.py  test_run_script_advanced.py  test_run_script_signals.py  test_server_initialization.py  test_server_lifespan.py  test_server_logging.py  test_server_main.py  (+12 more)
tests/cache/: test_cache_clock_skew.py  test_cache_concurrency.py  test_cache_initialization.py  test_cache_ttl_expiration.py  test_cross_platform_cache.py  test_cross_platform_home_manager.py  test_html_cache.py  test_simple_cache.py
tests/clients/: test_html_client.py  (+5 more)
website/: .eslintrc.json  .gitignore  .prettierignore  .prettierrc  README.md  metadata-checker.html  netlify.toml  next.config.js  package-lock.json  package.json  tailwind.config.js  windsurf_deployment.yaml
(+79 files in other folders)
