[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nixmcp"
version = "0.1.2"
description = "Model Context Protocol server for NixOS and Home Manager resources"
readme = "README.md"
authors = [
    {name = "James Brink", email = "james@utensils.io"},
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "mcp>=1.5.0",
    "requests>=2.32.3",
    "python-dotenv>=1.1.0",
    "beautifulsoup4>=4.13.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.26.0",
    "flake8>=7.1.2",
    "black>=25.1.0",
]

[project.scripts]
nixmcp = "nixmcp.__main__:mcp.run"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
ignore = ["E402", "E203"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
