[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-nixos"
version = "0.3.0"
description = "Model Context Protocol server for NixOS, Home Manager, and nix-darwin resources"
readme = "README.md"
authors = [
    {name = "James Brink", email = "james@utensils.io"},
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "mcp>=1.5.0",
    "requests>=2.32.3",
    "python-dotenv>=1.1.0",
    "beautifulsoup4>=4.13.3",
    "psutil>=5.9.8",
]

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.26.0",
    "flake8>=7.1.2",
    "black>=25.1.0",
    "types-beautifulsoup4>=4.12.0.20240229",
    "types-requests>=2.32.0",
    "wily>=1.25.0",
]
win = [
    "pywin32>=306.0",  # Required for Windows-specific file operations and tests
]

[project.scripts]
mcp-nixos = "mcp_nixos.__main__:mcp.run"
mcp-nixos-run = "mcp_nixos.run:main"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
ignore = ["E402", "E203"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
